overflow x fix

--- a/src/components/welcome/welcome.styles.sass
+++ b/src/components/welcome/welcome.styles.sass
@@ -8,6 +8,7 @@
     background: 
     min-height: 70vh
     position: relative
+    overflow-x: hidden
 
     .title
         font-family: 'Parisienne', cursive;
@@ -33,6 +34,7 @@
         margin-top: 2rem
         padding: 1rem 9rem
         margin-bottom: 6rem
+        overflow-x: hidden
 
         @media only  screen and ( max-width: $breakpoint-large-desktop  )
             padding: 1rem 0rem 1rem 2rem 
